Closed Bug 1181265 Opened 10 years ago Closed 10 years ago

crash in webrtc::videocapturemodule::DeviceInfoDS::CreateCapabilityMap(char const*)

Categories

(Core :: WebRTC: Audio/Video, defect, P3)

40 Branch
Unspecified
Windows NT
defect

Tracking

()

VERIFIED FIXED
mozilla42
Tracking Status
firefox39 --- wontfix
firefox40 --- verified
firefox41 --- verified
firefox42 --- verified
firefox-esr38 --- wontfix

People

(Reporter: jbecerra, Assigned: jesup)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-235978d6-f6f8-4088-b2db-97bef2150702. ============================================================= This signature is the same as the one addressed in bug 1130061, which is fixed. However we noticed that there are a couple of recent crashes in 40.a2. Neither of those two reports have any comments or URLs associated with them. These happened in Windows 7. One difference between the crasher in bug 1130061 and this one is the crash address, 0xf0 vs 0x0 More reports at: https://crash-stats.mozilla.org/report/list?product=Firefox&signature=webrtc%3A%3Avideocapturemodule%3A%3ADeviceInfoDS%3A%3ACreateCapabilityMap%28char+const%2A%29 0 xul.dll webrtc::videocapturemodule::DeviceInfoDS::CreateCapabilityMap(char const*) media/webrtc/trunk/webrtc/modules/video_capture/windows/device_info_ds.cc 1 xul.dll webrtc::videocapturemodule::DeviceInfoImpl::NumberOfCapabilities(char const*) media/webrtc/trunk/webrtc/modules/video_capture/device_info_impl.cc 2 xul.dll webrtc::ViECaptureImpl::NumberOfCapabilities(char const*, unsigned int) media/webrtc/trunk/webrtc/video_engine/vie_capture_impl.cc 3 xul.dll mozilla::MediaEngineWebRTCVideoSource::NumCapabilities() dom/media/webrtc/MediaEngineWebRTCVideo.cpp 4 xul.dll mozilla::MediaEngineCameraVideoSource::GetBestFitnessDistance(nsTArray<mozilla::dom::MediaTrackConstraintSet const*> const&) dom/media/webrtc/MediaEngineCameraVideoSource.cpp 5 xul.dll mozilla::VideoDevice::GetBestFitnessDistance(nsTArray<mozilla::dom::MediaTrackConstraintSet const*> const&) dom/media/MediaManager.cpp 6 xul.dll mozilla::GetSources<mozilla::VideoDevice, mozilla::dom::MediaTrackConstraints const > dom/media/MediaManager.cpp 7 xul.dll mozilla::GetUserMediaDevicesTask::Run() dom/media/MediaManager.cpp 8 xul.dll MessageLoop::DoWork() ipc/chromium/src/base/message_loop.cc 9 xul.dll mozilla::ipc::MessagePumpForNonMainUIThreads::DoRunLoop() ipc/glue/MessagePump.cpp 10 xul.dll base::MessagePumpWin::Run(base::MessagePump::Delegate*) ipc/chromium/src/base/message_pump_win.h 11 xul.dll MessageLoop::RunHandler() ipc/chromium/src/base/message_loop.cc 12 xul.dll MessageLoop::Run() ipc/chromium/src/base/message_loop.cc 13 xul.dll base::Thread::ThreadMain() ipc/chromium/src/base/thread.cc 14 xul.dll `anonymous namespace'::ThreadFunc(void*) ipc/chromium/src/base/platform_thread_win.cc 15 kernel32.dll BaseThreadInitThunk 16 ntdll.dll RtlUserThreadStart 17 kernel32.dll BasepReportFault 18 kernel32.dll BasepReportFault
Assignee: nobody → rjesup
Status: NEW → ASSIGNED
Very low frequency, though an easy wallpaper fix
Severity: critical → normal
backlog: --- → webRTC+
Rank: 38
Priority: -- → P3
Attachment #8630632 - Flags: review?(pkerr) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Comment on attachment 8630632 [details] [diff] [review] wallpaper over windows (driver?) returning null ptr to GetStreamCaps Approval Request Comment [Feature/regressing bug #]: n/a [User impact if declined]: People with certain "camera helper" dlls (or maybe buggy camera drivers) will crash in getUserMedia/webrtc [Describe test coverage new/current, TreeHerder]: not really testable. On central for a few weeks. [Risks and why]: virtually no risk - adds a null-check to the test on success/failure to catch "succeed with null pointer returned". [String/UUID change made/needed]: none
Attachment #8630632 - Flags: approval-mozilla-beta?
Attachment #8630632 - Flags: approval-mozilla-aurora?
Comment on attachment 8630632 [details] [diff] [review] wallpaper over windows (driver?) returning null ptr to GetStreamCaps Safe crash fix that's been on m-c for ~2 weeks. Beta+ Aurora+
Attachment #8630632 - Flags: approval-mozilla-beta?
Attachment #8630632 - Flags: approval-mozilla-beta+
Attachment #8630632 - Flags: approval-mozilla-aurora?
Attachment #8630632 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: