Bug 1181265 - Wallpaper over windows (driver?) returning null ptr to GetStreamCaps. r=pkerr, a=lmandel