media/webrtc/trunk/webrtc/modules/video_capture/windows/device_info_ds.cc
@@ -492,7 +492,8 @@ int32_t DeviceInfoDS::CreateCapabilityMap(
     {
         hr = streamConfig->GetStreamCaps(tmp, &pmt,
                                          reinterpret_cast<BYTE*> (&caps));
-        if (!FAILED(hr))
+        // Bug 1181265 - perhaps a helper dll returns success with nullptr
+        if (!FAILED(hr) && pmt)
         {
             if (pmt->majortype == MEDIATYPE_Video
                 && pmt->formattype == FORMAT_VideoInfo2)
